--- a/package.json
+++ b/package.json
@@ -1,9 +1,13 @@
 {
   "devDependencies": {
-    "@shopify/eslint-plugin": "^44.0.0",
-    "@shopify/prettier-plugin-liquid": "^1.4.0",
+    "@babel/core": "^7.23.5",
+    "@babel/eslint-parser": "^7.23.3",
+    "@babel/plugin-proposal-optional-chaining": "^7.21.0",
+    "@babel/preset-env": "^7.23.5",
+    "@babel/preset-react": "^7.23.3",
     "eslint": "^8.55.0",
     "eslint-config-airbnb": "^19.0.4",
+    "eslint-config-node": "^4.1.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-html": "^7.1.0",
     "eslint-plugin-import": "^2.29.0",
@@ -12,7 +16,9 @@
     "eslint-plugin-prettier": "^5.0.1",
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
-    "prettier": "^3.1.0"
+    "prettier": "^3.1.0",
+    "@shopify/eslint-plugin": "^44.0.0",
+    "@shopify/prettier-plugin-liquid": "^1.4.0"
   },
   "scripts": {
     "lint": "eslint .",
