--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
     "@babel/plugin-proposal-optional-chaining": "^7.21.0",
     "@babel/preset-env": "^7.23.5",
     "@babel/preset-react": "^7.23.3",
+    "@shopify/eslint-plugin": "^44.0.0",
+    "@shopify/prettier-plugin-liquid": "^1.4.0",
     "eslint": "^8.55.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-node": "^4.1.0",
@@ -17,8 +19,7 @@
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "prettier": "^3.1.0",
-    "@shopify/eslint-plugin": "^44.0.0",
-    "@shopify/prettier-plugin-liquid": "^1.4.0"
+    "tailwindcss": "^3.3.6"
   },
   "scripts": {
     "lint": "eslint .",
