--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -1,5 +1,5 @@
 {
-  "plugins": ["@shopify/prettier-plugin-liquid"],
+  "plugins": ["@shopify/prettier-plugin-liquid", "prettier-plugin-tailwindcss"],
   "tabWidth": 2,
   "semi": true,
   "singleQuote": true,
