product.liquid update with cart api

--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   },
   "scripts": {
     "lint": "eslint .",
-    "lint:fix": "eslint --fix ."
+    "lint:fix": "eslint --fix .",
+    "tw": "npx tailwindcss -i ./src/input.css -o ./assets/output.css --watch"
   }
 }
